Sections on extending shapes and events added

--- a/Hoofdstukken/appendices/uitbreiden.tex
+++ b/Hoofdstukken/appendices/uitbreiden.tex
@@ -1,3 +1,5 @@
 \chapter{Uitbreiden} \label{sec:uitbreiden}
 
 \input{./Hoofdstukken/appendices/2_uitbreiden/inleiding.tex}
+\input{./Hoofdstukken/appendices/2_uitbreiden/shapes.tex}
+\input{./Hoofdstukken/appendices/2_uitbreiden/events.tex}
